# chess_ai

./: CMakeLists.txt  board.cpp  board.h  game.cpp  game.h  hexahedron.cpp  hexahedron.h  main.cpp  piece.h  triangle.cpp  triangle.h  vcpkg.json
